--- a/css/css-lesson-04.css
+++ b/css/css-lesson-04.css
@@ -14,15 +14,17 @@ body {
 
 .grid {
   display: grid;
-  grid-gap: 2rem;
+  grid-gap: 2.5rem;
   /*grid-auto-flow: dense;*/
   /*grid-template-columns: 1fr 1fr 1fr*/
   grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 120px;
+  width: 100%;
 }
 
 .grid div {
   padding: 1rem;
-  background-color:rgba(0,0,0,0.1);
+  background-color: blue;
 }
 
 .item5 {
@@ -44,11 +46,11 @@ body {
 }
 
 .wide {
-  grid-row: 3 / 5;
-  grid-column: 2 / 5;
+  grid-row: 1 / 4;
+  grid-column: 2 / 4;
 }
 
 .tall {
-  grid-row: 2 / 3;
+  grid-row: 1 / 3;
   grid-column: 1 / 3;
 }
