--- a/css/style.css
+++ b/css/style.css
@@ -195,9 +195,14 @@ transition: text-decoration-color .3s ease-in-out;
   height: 70vh;
 }
 
-#work h3, #writing h3 {
+#work h3, #writing h3, #portfolio h3 {
   letter-spacing: 1px;
   margin-bottom: 2rem;
+}
+
+#work h3 a, #writing h3 a, #protfolio h3 a {
+  color: var(--body-color);
+  text-decoration: none;
 }
 
 .work-item {
@@ -272,6 +277,32 @@ transition: text-decoration-color .3s ease-in-out;
 .writing-item p a {
   color: purple;
   text-decoration-color: purple; 
+}
+
+/*PORTFOLIO*/
+
+#portfolio {
+  margin-top: 2rem;
+}
+
+/*
+#portfolio .work-item {
+  padding-top: calc((9 / 16) * 100%);
+}
+*/
+
+#portfolio .work-item .inner .work-inside {
+  opacity: 1;
+}
+
+#portfolio p a {
+  color: var(--body-color);
+  text-decoration-color: var(--body-color);
+  transition: text-decoration-color .3s ease-in-out;
+}
+
+#portfolio p a:hover {
+  text-decoration-color: transparent;
 }
 
 /*FOOTER*/
